...

    <string name="seasons">\u0020Seasons</string>
    <string name="episodes">\u0020Episodes</string>
    <string name="seasons1">\u0020Season</string>
    <string name="episodes1">\u0020Episode</string>
    <string name="votes">\u0020votes</string>
    <string name="genres">Genres:</string>
    <string name="creators">Creator(s):</string>
    <string name="remove">Remove</string>
    <!-- genres -->
    <string name="genre_action_adventure">Action &amp; Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
...
    <string name="sort_by_first_air_date_desc_request">first_air_date.desc</string>
    <string name="sort_by_first_air_date_asc_request">first_air_date.asc</string>
    <string name="poster_path">http://image.tmdb.org/t/p/w300</string>

    <!--  actor menu links -->
    <string name="title_links">Links</string>
    <string name="link_imdb">IMDb</string>
    <string name="link_tmdb">THE MOVIE DB</string>
    <string name="link_google_search">Google Search</string>
    <string name="link_youtube_search">Youtube Search</string>
    <string name="link_wikipedia">Wikipedia</string>


    <string name="imdb_tv_show_webpage">http://www.imdb.com/title/</string>
    <string name="imdb_actor_webage_start">http://www.imdb.com/name/</string>
    <string name="imdb_actor_webage_end">/?ref_=tt_cl_t4</string>
    <string name="tmdb_tv_show_webpage">https://www.themoviedb.org/tv/</string>
    <string name="google_search_webpage">https://www.google.co.uk/#q=</string>
    <string name="youtube_search_webpage">https://www.youtube.com/results?search_query=</string>
    <string name="wikipedia_webapge">https://en.wikipedia.org/wiki/</string>
    <string name="wikipedia_webpage_end">_(TV_series)</string>

</resources>

