<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/colorBackgroundDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/cast_layout"
        android:background="?android:selectableItemBackground"
        android:padding="@dimen/padding_medium"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/photo"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:scaleType="centerInside"
        tools:background="@mipmap/ic_launcher"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            tools:text="Character"
            android:id="@+id/character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_medium"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorAccent"/>

        <TextView
            tools:text="Actor"
            android:id="@+id/actor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorTextLight"/>

    </LinearLayout>

</LinearLayout>
</FrameLayout>