<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_small"
    android:paddingBottom="@dimen/padding_small"
    android:paddingLeft="@dimen/padding_medium"
    android:paddingRight="@dimen/padding_medium"

    android:layout_gravity="center"
    android:gravity="center">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_elevation"
        card_view:cardCornerRadius="@dimen/card_corner_radius">
        <LinearLayout
            android:id="@+id/seasons_layout"
            android:background="@color/colorItemBackgroundDark"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                tools:background="@mipmap/ic_launcher"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small">
                <TextView
                    tools:text="Title"
                    android:id="@+id/season_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/colorTextLight"
                    />
                <org.apmem.tools.layouts.FlowLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        tools:text="16/04/2009"
                        android:id="@+id/season_air_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/colorTextLight"/>
                    <TextView
                        tools:text="10 Episodes"
                        android:id="@+id/season_episodes_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/colorAccent"/>
                </org.apmem.tools.layouts.FlowLayout>
                <TextView
                    android:id="@+id/season_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/colorTextLight"
                    tools:text="This is the season overview"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>