...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/padding_medium">

            <TextView
                android:id="@+id/start_year"
                tools:text="2000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_medium"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"/>
...
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/padding_medium">
                <TextView
                    android:id="@+id/user_score"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/user_score_circle"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    tools:text="6.9"
                    />

                <TextView
                    android:id="@+id/vote_count"
                    android:paddingLeft="@dimen/padding_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/colorTextLight"
                    tools:text="130"/>
...
                android:id="@+id/genres_list"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                tools:text="Crime, Drama"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
...
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"
                android:paddingBottom="@dimen/padding_medium"
                tools:text="Person 1, Person 2"/>

            <TextView
                android:id="@+id/overview"
                android:textColor="@color/colorTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                tools:text="This is where the overview goes. Some overviews are very long in length, therefore taking up many lines."/>

...
